fix goods section items align

--- a/source/sass/goods.scss
+++ b/source/sass/goods.scss
@@ -1,6 +1,6 @@
 .goods {
   background-color: #1B2D37;
-  padding: 93px 0 127px;
+  padding: 93px 0 110px;
 }
 
 .goods__content {
@@ -24,8 +24,8 @@
   margin: 0;
   padding: 0;
   display: flex;
-  flex-direction: row;
-  justify-content: space-between;
+  flex-flow: row wrap; 
+  justify-content: flex-start;
 }
 
 .goods__item {
@@ -33,6 +33,12 @@
   height: 620px;
   position: relative;
   list-style: none;
+  margin-right: 2.6%;
+  margin-bottom: 20px;
+
+  &:nth-child(3n) {
+    margin-right: 0;
+  }
 
   &::after {
     position: absolute;
@@ -116,6 +122,7 @@
   .goods__item {
     width: 100%;
     height: 256px;
+    margin-right: 0;
     margin-bottom: 46px;
 
     &--production::after {
